# SkunkBooth

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  locales.sh  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  other-issues-template.md  other-issues.md
.github/workflows/: codeql-analysis.yml  greetings.yml
filters/: filters.py
locales/: base.pot
locales/en/LC_MESSAGES/: base.mo
locales/eo/LC_MESSAGES/: base.mo  base.po
skunkbooth/: asciiGen.py  fileIO.py  frames.py  logger.py  main.py  webcam.py
skunkbooth/data/: constants.py  defaults.py
skunkbooth/filters/: alphabet.py  arrows.py  autocontrast.py  card_deck.py  cold.py  copyright.py  dark_autocontrast.py  dollars.py  enhanced.py  enhanced_grayscale.py  flip.py  grayscale.py  greekify.py  grid.py  hash_tag.py  invert.py  japanese.py  math.py  matrix.py  musical.py  night_vision.py  posterize.py  question_mark.py  rupees.py  shovels.py  star_stripes.py  stars.py  warm.py
skunkbooth/utils/: CamReader.py  asciiGen.py  dropdownlist.py  fileIO.py  filterManager.py  frame.py  frames.py  helpers.py  logger.py  settings.py  videoManager.py  webcam.py
skunkbooth/utils/frames/: filter_frame.py  gallery_frame.py  main_frame.py  preview_frame.py  (+1 more)
src/: CamReader.py  ascci.py  ascci_utils.py  asciiGen.py  ascii_images.py  asciimatics_mod.py  fileIO.py  filterManager.py  frames.py  logger.py  main.py  webcam.py
src/dat/: colours.json
src/data/: constants.py
src/filters/: invert.py  matrix.py  snowman.py  stars.py
util/: CamReader.py
